fixed bug on mobile caused by hyperlinks

--- a/src/stylesheets/screens/phone/p-bio.scss
+++ b/src/stylesheets/screens/phone/p-bio.scss
@@ -21,11 +21,18 @@
 
     .bio-email {
         margin-top: -1.15rem;
+
+        h4 {
+            margin-top: -1.15rem;
+        }
     }
 
     .bio-phone {
         text-align: right;
         margin-top: 1rem;
+        h4 {
+            margin-top: 1rem;
+        }
     }
 
     .bio-description {
